# CinemaAPI

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
migrations/: env.py
migrations/versions/: 2024_01_12_2317-b96addedb7cd_create_tables.py  2024_01_16_0348-009346249b8e_create_tables.py  2024_01_17_0308-7cb6e0b09805_change_fields_in_table_films.py
src/: config.py  main.py
src/application/film/: film_service.py
src/application/schemas/: film_schema.py
src/infrastructure/db/: database.py
src/infrastructure/models/: __init__.py  booking.py  bookings.py  branch_office.py  branch_offices.py  cinema_hall.py  cinema_halls.py  film.py  film_session.py  film_sessions.py  films.py  payment.py  payments.py  user.py  users.py
src/infrastructure/repository/: base_repository.py  film_repository.py
src/presentation/: dependencies.py
src/presentation/film/: router.py
